kubernetes/apps/default/umami/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami-script
  namespace: default
spec:
  hostnames: ["umm.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: umami
          namespace: default
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /script.js
        - path:
            type: PathPrefix
            value: /api/send
